Change to GitHub on about page

--- a/_includes/about/contact.html
+++ b/_includes/about/contact.html
@@ -14,8 +14,8 @@
         <a href="https://www.linkedin.com/in/eriksamuelsson/">
             <i class="fab fa-linkedin"></i>
         </a>
-        <a href="https://gitlab.com/users/ErikSamuelsson">
-            <i class="fab fa-gitlab"></i>
+        <a href="https://github.com/Samuelsson">
+            <i class="fab fa-github"></i>
         </a>
     </div>
 </div>
