--- a/_includes/about/contact.html
+++ b/_includes/about/contact.html
@@ -14,7 +14,7 @@
         <a href="https://www.linkedin.com/in/eriksamuelsson/">
             <i class="fab fa-linkedin"></i>
         </a>
-        <a href="https://github.com/Samuelsson">
+        <a href="https://github.com/samuelsson">
             <i class="fab fa-github"></i>
         </a>
     </div>
