--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,7 +15,7 @@ $code-color: #bf616a;
 $serif-secondary: Palatino, 'Palatino LT STD', 'Palatino Linotype', 'Book Antiqua', 'Georgia', serif;
 $sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji",
 "Segoe UI Emoji", "Segoe UI Symbol";
-$monospaced: Menlo, Monaco, monospace;
+$monospaced: Menlo, Monaco, Courier, monospace;
 
 $default-padding: 1rem;
 $border-radius: 5px;
