Add a link to archives in blog footer

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -20,6 +20,8 @@ layout: default
     {% endfor %}
 </div>
 
-<div class="pagination">
+<div class="pagination"></div>
 
+<div class="archive-link">
+    <a href="{{ '/archive' | prepend: site.baseurl }}">More posts</a>
 </div>
